fix(style): offscreen label

--- a/webroot/scss/_paypalmes.scss
+++ b/webroot/scss/_paypalmes.scss
@@ -73,7 +73,7 @@
     border-color: #db2828;
     color: #fff;
     margin-left: 1em;
-    right: -4em;
+    left: 75vw;
     position: absolute;
     padding: .5833em .833em;
     padding-left: 1.5em;
